<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GOLFZON CLOUD</string>
    <string name="action_settings">Settings</string>

    <string-array name="protocol_main">
        <item>rtsp</item>
    </string-array>
    <string-array name="protocol_transport">
        <item>udp</item>
        <item>tcp</item>
    </string-array>
    <string-array name="codec_video">
        <item>h264</item>
        <item>libvpx</item>
    </string-array>
    <string-array name="codec_audio">
        <item>aac</item>
        <item>mp3</item>
        <item>opus</item><item>vorbis</item>
        
    </string-array>
    <string-array name="audio_samplerate">
        <item>22050</item>
        <item>44100</item>
        <item>48000</item>
    </string-array>
    <string-array name="audio_channels">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="title_activity_player">PlayerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_profile_label">Profile : </string>
    <string name="title_profile_value">None </string>

    <string name="title_server_label">Server : </string>

    <string name="connStatus">Sensor : </string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="disconnected">Disconnected</string>
    <string name="connect">Connect</string>
    <string name="deviceName">Device : </string>

    <string name="menu_home">HOME</string>
    <string name="menu_bluetooth">BLUETOOTH</string>
    <string name="menu_profile">PROFILE</string>
    <string name="menu_new_profile">NEW PROFILE</string>
    <string name="menu_edit_profile">EDIT PROFILE</string>
    <string name="menu_rename_profile">RENAME PROFILE</string>
    <string name="menu_delete_profile">DELETE PROFILE</string>



</resources>
