<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_action_home"
        android:orderInCategory="100"
        android:title="@string/menu_home"></item>
    <item
        android:id="@+id/menu_action_new_profile"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_new_profile"></item>
    <item
        android:id="@+id/menu_action_edit_profile"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menu_edit_profile"></item>
    <item
        android:id="@+id/menu_action_rename_profile"
        android:orderInCategory="400"
        android:title="@string/menu_rename_profile"></item>
    <item
        android:id="@+id/menu_action_delete_profile"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/menu_delete_profile"></item>
</menu>
