<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_server_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_server_label" />

        <TextView
            android:id="@+id/title_server_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnected" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_sensor_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connStatus" />

        <TextView
            android:id="@+id/title_sensor_status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnected" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_profile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profile_label" />

        <TextView
            android:id="@+id/title_profile_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profile_value" />

    </LinearLayout>

    <Button
        android:id="@+id/btnStartConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect" />

</LinearLayout>